# EasyContest

./: .ec.conf.example  CMakeLists.txt  EasyContest.pro  EasyContest.pro.opengl  EasyContest.pro.zoer  README.rst  alias_to_sunsdr.sh  contestload.cpp  contestload.h  contestload.ui  install_easycontest.sh  license.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make_distributive.sh  moc_mainwindow.cpp  my_qmake.sh  readme.en  readme.md  readme.rst  readme.ru  todo.txt  ui_mainwindow.h
.easycontest/: .ec.cnf.example  ec.cnf  ec.cnf.example
.easycontest/contests/: generic.ec  minitest.ec  minitest.ec.example
libs/QGlobalShortcut/: qglobalshortcut.pri
resource/: EasyContest.desktop.example  resource.qrc
source/: contestload.cpp  contestload.h  contestload.ui  customlineedit.cpp  customlineedit.h  logging_categories.cpp  logging_categories.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  source.pro
source/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
translations/: EasyContest_ru.qm  EasyContest_ru.ts  resource.qrc
